# fluid

./: .cargo-watch.toml  .env.docker  .env.example  .gitignore  .gitleaks.toml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  PROJECT_STRUCTURE.md  README.md  VERIFICATION_CHECKLIST.md  bulk.js  docker-compose.scale.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.changeset/: config.json
.github/: dependabot.yml
.github/workflows/: chromatic.yml  codeql-analysis.yml  commitlint.yml  docs.yml  fluid-server-tests.yml  gitleaks.yml  lint-ts.yml  nx-ci.yml  playwright-e2e.yml  release.yml  rust-ci.yml  rust-wasm.yml  server-signing-benchmark.yml
.next/: trace  trace-build
.nx/cache/: run.json
.nx/workspace-data/: 8A2A1ECB-40B3-53CB-B50C-7C1FC73FDA93.db  docker-13442701582942114059.hash  file-map.json  lockfile-dependencies.hash  nx_files.nxt  project-graph.json  (+3 more)
admin-dashboard/: CHANGELOG.md  Dockerfile  README.md  ai-support.test.mts  auth.ts  components.json  env.example  eslint.config.mjs  forum.test.mjs  middleware.ts  package-lock.json  package.json  playwright.config.ts  plugins.test.mjs  referral.test.mjs  sdk.test.mjs  tailwind.config.ts  tsconfig.json  typedoc.json  verification.txt  vitest.config.mjs
client/: CHANGELOG.md  README.md  TELEMETRY.md  WEB_WORKER_README.md  demo-queue.html  demo.html  package-lock.json  package.json  tsconfig.json  tsup.config.ts  typedoc.json
docs/: horizontal-scaling.md  index.html  migration-benchmarking.md  rate-limiting.md
fluid-cli/: Cargo.toml
fluid-cli/src/: main.rs
fluid-go/: client.go  client_test.go  go.mod  go.sum
fluid-py/: .gitignore  pyproject.toml
fluid-py/examples/: example_fee_bump.py  mock_fluid_server.py
fluid-py/fluid_py/: __init__.py  client.py  exceptions.py  models.py
fluid-py/tests/: test_client.py
fluid-server/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.rust  Makefile  build.rs
frontend/: CHANGELOG.md  index.html  package-lock.json  package.json
infra/: nginx.conf
proto/: signer.proto
server/: .env.example  CHANGELOG.md  Cargo.toml  Dockerfile  PR_DESCRIPTION.md  README.md  TWILIO_SMS_IMPLEMENTATION.md  demo-anomaly-detection.ts  dev.db  index.d.ts  migration_benchmark_report.md  package-lock.json  package.json  prisma.config.ts  temp.db  tokio_performance_report.md  tsconfig.json  typedoc.json  vitest.config.ts
(+909 files in other folders)
